# rust_template_x86_64

./: Cargo.toml  README.md  chat.md
.cargo/: config.toml
crates/print/src/: lib.rs
src/: lib.rs  main.rs  mamod.rs  panic.rs
