[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
print = { path = "crates/print" }

[workspace]
members = ["crates/print"]

[lib]
name = "template"
path = "src/lib.rs"
test = false

[[bin]]
name = "template"
path = "src/main.rs"
test = false

[profile.release]
lto = true
# codegen-units = 1
# opt-level = "z"

[build-dependencies]
cc = "1.0"
